src/css/App.css
/*
background: #EEECE1
outhouse orange: #FEC04F
*/

@font-face {
  font-family: OakwoodClean;
  src: url("../fonts/oakwood/Oakwood-Clean.otf") format("opentype");
}
@font-face {
  font-family: OakwoodRough;
  src: url("../fonts/oakwood/Oakwood-Rough.otf") format("opentype");
}
@font-face {
  font-family: OakwoodRoughShadow;
  src: url("../fonts/oakwood/Oakwood-RoughShadow.otf") format("opentype");
}
@font-face {
  font-family: OldGrowth;
  src: url("../fonts/old-growth/OldGrowth-Regular.otf") format("opentype");
}

* {
  transition-duration: 0.3s;
}

html{
  box-sizing: border-box;
}

body{
  background-color: #EEECE1;
  overflow-x:hidden;

}

h1{
  font-family: OldGrowth;
  color: white;
  margin-bottom: 40px;
}

h2{
  font-family: OldGrowth;
  color: #FEC04F;
  margin-bottom: 50px;
}

h3{
  font-family: OakwoodRoughShadow;
  margin-top: 20px;
  font-size: 34px;
  border-bottom: 2px solid black;
  display: inline-block;
}

.section-title-container {
  text-align: center;
}

p {
  font-family: 'Varela Round', sans-serif;
}

/*Header*/
header>*{
  display: inline-block;
}

header{
  position: relative;
  height: 100px;
}

.logo-container{
  position: absolute;
  z-index: 2;
}
.nav-container{
  width: 100%;
  position: absolute;
  bottom: 0px;
  text-align: center;
  margin: 0px;
}
.cart-container{
  position: absolute;
  bottom: 4px;
  right: 10px;
}

.logo{
  height: 80px;
  margin: 10px;
}

.logo:hover{
  cursor: pointer;
}

.logo-horizontal{
  display: none;
}

.cart{
  height: 40px;
}

.header div{
  position: relative;
}

/*Nav*/
.nav{
  width: 100%;
  margin-bottom: 4px;
  display: inline-block;
}

.nav li{
  display: inline-block;
}
.nav-about{
  margin: 0px 8%;
}

.nav button{
  color: black;
  font-family: OakwoodClean;
  font-size: 26px;
  border: none;
  padding: 0px;
  background-color: transparent;
}

.nav button:hover{
  color: black;
  text-decoration: underline;
  cursor: pointer
}


/*Hero*/
#hero{
  background-color: black;
  height: 500px;
}

#hero:hover{
  cursor: pointer;
}

.photo-container{
  height: 500px;
}

.blaze-photo{
  height: 500px;
}

.blaze-photo-slim{
  display: none;
  height: 500px;
}

.hero-text{
  padding: 40px;
}

.sticker{
  height: 140px;
}

/*Albums*/

.album{
  padding: 10px;
  text-align: center;
  margin-top: 14px;
}

.album:hover h4{
  text-decoration: underline;
}

.album:hover{
  cursor: pointer;
}

.cover{
  width: 80%;
  box-shadow: -2px 2px 6px 0px rgba(0,0,0,0.4);
}

h4.artist, h4.title {
  font-family: 'Varela Round', sans-serif;
  font-size: 16px;
  margin: 2px;
}

h4.artist{
  font-weight: 900;
}

.album-text-container{
  display: inline-block;
  width: 60%;
  border-top: 2px black solid;
  margin-top: 12px;
  padding-top: 8px;
}

/*contact*/
section#contact{
  padding: 20px 30px;
  padding-bottom: 0px;
}

img.contact-background-logo{
  float: right;
  width: 180px;
  opacity: 0.5;
}

ul.contact-info{
  padding: 12px 0;
  margin-bottom: 0;
  text-align: left;
}

section#contact:hover *{
  opacity: .9;
}

.contact-info li {
  display: block;
  font-family: 'Varela Round', sans-serif;
  margin-bottom: 8px;
  font-size: 12px;
  opacity: 0.5;
  font-weight: 600;
}

.contact-info a{
  color: black;
  opacity: 0.8;
  text-decoration: underline;
}

@media only screen and (max-width: 850px) {

  .nav-about{
    margin: 0px 4%;
  }

  h1{
    font-size: 34px;
  }
  
  h2{
    font-size: 28px;
  }


}

@media only screen and (max-width: 650px) {
  
  /*header*/
  header{
    height: 80px;
  }
  .logo{
    height: 60px;
  }

  /*nav*/
  .nav-container{
    display: none;
  }

  /*hero*/
  .blaze-photo{
    display: none;
  }
  .blaze-photo-slim{
    display: inline-block;
  }
  .hero-text{
    padding: 30px 0px;
  }
  h1.hero-artist{
    padding-left: 46px;
    font-size: 24px;
    margin-bottom: 90px;
  }
  
  h2.hero-title{
    padding-left: 20px;
    font-size: 20px;
    margin-bottom: 90px;
  }
  .sticker{
    height: 110px;
    margin-left: -20px;
  }

  /*albums*/
  h4.artist, h4.title {
    font-size: 14px;
  }

  /*contact*/

  img.contact-background-logo{
    width: 100px;
  }

  .contact-info li {
    margin-bottom: 0;
    font-size: 8px;
  }

  section#contact{
    padding: 20px 10px;
    padding-bottom: 0;
  }

  ul.contact-info{
    padding: 6px 0;
  }
  
  

  
}

@media only screen and (min-width: 1000px) {
  .sticker{
    height: 180px;
  }
}

